--- a/app/src/main/res/layout/activity_flow_control.xml
+++ b/app/src/main/res/layout/activity_flow_control.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/button_1_default" />
+        android:background="@drawable/button_1" />
 
     <Button
         android:layout_width="100dp"
@@ -21,5 +21,5 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/button_0_default" />
+        android:background="@drawable/button_0" />
 </RelativeLayout>
