--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,5 +17,6 @@
         android:minHeight="50dp"
         android:gravity="center_vertical"
         android:background="#ffe7ffec"
-        android:paddingLeft="15dp" />
+        android:paddingLeft="15dp"
+        android:textColor="@android:color/black" />
 </RelativeLayout>
