Add custom selector to ExpandableListView.

--- a/app/src/main/res/layout/activity_flow_control.xml
+++ b/app/src/main/res/layout/activity_flow_control.xml
@@ -15,5 +15,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
+        android:groupIndicator="@null"
         android:dividerHeight="2dp" />
 </android.support.v4.widget.DrawerLayout>
