--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#ffe7ffec"
     android:id="@+id/rlListItem">
 
     <TextView
@@ -12,11 +13,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:minHeight="50dp"
         android:gravity="center_vertical"
-        android:background="#ffe7ffec"
+
+        android:textColor="@android:color/black"
         android:paddingLeft="15dp"
-        android:textColor="@android:color/black" />
+        android:layout_toLeftOf="@+id/ivSelector"
+        android:layout_toStartOf="@+id/ivSelector"
+        android:paddingRight="5dp" />
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/ivSelector"
+        android:layout_alignBottom="@+id/tvGroupItem"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
