--- a/app/src/main/res/layout/activity_flow_control.xml
+++ b/app/src/main/res/layout/activity_flow_control.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/frContent"
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
