Add StudentInfoFragment and layout.  Add text color to styles. Use the style in other xml files.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,6 +12,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/language"
         android:id="@+id/tvLanguage"
+        style = "@style/TextColor"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
