--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TextColor">
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
 </resources>
