--- a/app/src/main/res/layout/custom_spinner_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_layout.xml
@@ -2,9 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="right"
     android:singleLine="true"
-    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:textAppearance="?android:attr/textAppearanceMedium"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="100dp"
-    android:textColor="@color/dark_grey">
+    android:layout_height="match_parent">
+
+
 </TextView>
