--- a/app/src/main/res/layout/fragment_new_or_continuing.xml
+++ b/app/src/main/res/layout/fragment_new_or_continuing.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
         android:layout_marginBottom="15dp"
-        android:textColor="@android:color/black"
+        style = "@style/TextColor"
         android:textSize="25sp"/>
 
     <Button
@@ -25,6 +25,6 @@
         android:layout_alignStart="@+id/btnContinuing"
         android:layout_alignRight="@+id/btnContinuing"
         android:layout_alignEnd="@+id/btnContinuing"
-        android:textColor="@android:color/black"
+        style = "@style/TextColor"
         android:textSize="25sp"/>
 </RelativeLayout>
