--- a/app/src/main/res/layout/fragment_splash_1.xml
+++ b/app/src/main/res/layout/fragment_splash_1.xml
@@ -20,8 +20,8 @@
         android:id="@+id/textView"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:textColor="@android:color/black"/>
+        style = "@style/TextColor"
+        android:layout_marginTop="34dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,6 +31,6 @@
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:textColor="@android:color/black"/>
+        style = "@style/TextColor"
+        android:layout_marginTop="37dp"/>
 </RelativeLayout>
