--- a/app/src/main/res/layout/fragment_student_info.xml
+++ b/app/src/main/res/layout/fragment_student_info.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:id="@+id/svStudentInfo">
 
 
     <LinearLayout
@@ -16,7 +17,9 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/student_info"
             android:id="@+id/textView7"
-            android:layout_marginBottom="10dp"/>
+            style = "@style/TextColor"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -29,12 +32,16 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/first_name"
                 android:id="@+id/textView6"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
+                android:id="@+id/etFirstName"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
 
         </LinearLayout>
@@ -50,12 +57,16 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/last_name"
                 android:id="@+id/textView8"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText2"
+                android:id="@+id/etLastName"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
         </LinearLayout>
 
@@ -69,14 +80,19 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/date_of_birth"
-                android:id="@+id/textView9"
+                android:id="@+id/tvDateOfBirth"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText3"
-                android:layout_weight="1.5"/>
+                android:id="@+id/etDateOfBirth"
+                style = "@style/TextColor"
+                android:layout_weight="1.5"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:focusable="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -90,12 +106,17 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/age"
                 android:id="@+id/textView10"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText4"
+                android:id="@+id/etAge"
+                android:inputType="number"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
         </LinearLayout>
 
@@ -110,13 +131,18 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/teacher"
                 android:id="@+id/textView11"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText5"
-                android:layout_weight="1.5"/>
+                android:id="@+id/etTeacher"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_weight="1.5"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -130,12 +156,17 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/grade"
                 android:id="@+id/textView12"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText6"
+                android:id="@+id/etGrade"
+                android:inputType="number"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
         </LinearLayout>
 
@@ -150,12 +181,16 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/room"
                 android:id="@+id/textView13"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText7"
+                android:id="@+id/etRoom"
+                style = "@style/TextColor"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
         </LinearLayout>
 
@@ -164,7 +199,9 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/screenings"
-            android:id="@+id/textView14"/>
+            style = "@style/TextColor"
+            android:id="@+id/textView14"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -176,32 +213,32 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/hearing"
-                android:id="@+id/textView15"
+                android:id="@+id/tvHearing"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
-            <RelativeLayout
+            <EditText
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1.5">
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/etHearing"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:minWidth="150sp"
+                style = "@style/TextColor"
+                android:focusable="true"
+                android:layout_weight=".9"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Mar 15, 2015"
-                    android:id="@+id/textView18"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spinner"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_toRightOf="@+id/textView18"/>
-            </RelativeLayout>
+            <Spinner
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/spnHearing"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/etHearing"
+                style = "@style/TextColor"
+                android:layout_weight=".6"/>
 
         </LinearLayout>
 
@@ -215,34 +252,35 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/vision"
-                android:id="@+id/textView16"
+                android:id="@+id/tvVision"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
-            <RelativeLayout
+            <EditText
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1.5">
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/etVision"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:minWidth="150sp"
+                style = "@style/TextColor"
+                android:focusable="true"
+                android:layout_weight=".9"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Large Text"
-                    android:id="@+id/textView19"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"/>
+            <Spinner
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/spnVision"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/etVision"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                style = "@style/TextColor"
+                android:layout_weight=".6"/>
+            </LinearLayout>
 
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spinner2"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_toRightOf="@+id/textView19"/>
-            </RelativeLayout>
-
-        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -254,14 +292,33 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/speach"
-                android:id="@+id/textView17"
+                android:id="@+id/tvSpeachAndLanguage"
+                style = "@style/TextColor"
                 android:layout_weight="1"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText10"
+                android:id="@+id/etSpeachLanguage"
+                style = "@style/TextColor"
+                android:focusable="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_weight="1.5"/>
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="49dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/next"
+                android:id="@+id/btnNext"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+        </RelativeLayout>
+
     </LinearLayout>
 </ScrollView>
