--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:minHeight="50dp"
+        style = "@style/TextColor"
         android:gravity="center_vertical"
 
         android:textColor="@android:color/black"
