--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
 <color name="yellow">#ffffff00</color>
 <color name="white">#ffffffff</color>
 <color name="black">#ff000000</color>
-<color name="red">#ffff0000</color>	
+<color name="red">#ffff0000</color>
+<color name="dark_grey">#ff787878</color>
 </resources>
