add custom datepicker fragment.  Delay construction of navigation draw until after student info screen is processed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
 <color name="black">#ff000000</color>
 <color name="red">#ffff0000</color>
 <color name="dark_grey">#ff787878</color>
+<color name="light_grey">#ffbbbbbb</color>
 </resources>
