add error messages to student info screen.  Improve flow of student info screen.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,7 @@
 
     <style name="TextColor">
         <item name="android:textColor">@color/dark_grey</item>
+        <item name="android:textColorHint">@color/red</item>
+        <item name="android:privateImeOptions">nm</item>
     </style>
 </resources>
