--- a/app/src/main/res/layout/fragment_student_info.xml
+++ b/app/src/main/res/layout/fragment_student_info.xml
@@ -21,6 +21,17 @@
             android:layout_marginBottom="10dp"
             android:textStyle="bold"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/tvError"
+            android:visibility="gone"
+            android:background="@color/light_red"
+            android:text="test text"
+            android:textColor="@color/black"
+            android:paddingLeft="10dp"/>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
@@ -39,6 +50,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etFirstName"
+                android:inputType="textNoSuggestions|textPersonName"
                 style = "@style/TextColor"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -64,6 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etLastName"
+                android:inputType="textNoSuggestions|textPersonName"
                 style = "@style/TextColor"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -92,6 +105,7 @@
                 android:layout_weight="1.5"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColorHint="@color/red"
                 android:focusable="true"/>
         </LinearLayout>
 
@@ -138,6 +152,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etTeacher"
+                android:inputType="textNoSuggestions|textPersonName"
                 style = "@style/TextColor"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -191,7 +206,8 @@
                 style = "@style/TextColor"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_weight="1.5"/>
+                android:layout_weight="1.5"
+                android:inputType="textNoSuggestions"/>
         </LinearLayout>
 
         <TextView
@@ -308,7 +324,8 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="49dp">
+            android:layout_height="49dp"
+            android:visibility="visible">
 
             <Button
                 android:layout_width="wrap_content"
@@ -317,7 +334,12 @@
                 android:id="@+id/btnNext"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
+                style = "@style/TextColor"
+                android:layout_alignParentEnd="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:visibility="visible"/>
+
         </RelativeLayout>
 
     </LinearLayout>
