--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="orange">#fffb5522</color>
-<color name="blue">#ff0000ff</color>
-<color name="lightblue">#ff00ffff</color>
-<color name="green">#ff00ff00</color>
-<color name="yellow">#ffffff00</color>
-<color name="white">#ffffffff</color>
-<color name="black">#ff000000</color>
-<color name="red">#ffff0000</color>
-<color name="dark_grey">#ff787878</color>
-<color name="light_grey">#ffbbbbbb</color>
+    <color name="orange">#fffb5522</color>
+    <color name="blue">#ff0000ff</color>
+    <color name="lightblue">#ff00ffff</color>
+    <color name="green">#ff00ff00</color>
+    <color name="yellow">#ffffff00</color>
+    <color name="white">#ffffffff</color>
+    <color name="black">#ff000000</color>
+    <color name="red">#ffff0000</color>
+    <color name="light_red">#ffffa3a3</color>
+    <color name="dark_grey">#ff787878</color>
+    <color name="light_grey">#ffbbbbbb</color>
 </resources>
