--- a/app/src/main/res/menu/menu_flow_control.xml
+++ b/app/src/main/res/menu/menu_flow_control.xml
@@ -3,4 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".FlowControlActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/new_screening"
+          android:title="@string/new_screening"
+          android:orderInCategory="10"
+          android:visible="false"
+          app:showAsAction="always"/>
 </menu>
