--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:actionMenuTextAppearance">@style/CustomMenuItemText</item>
+        <item name="actionMenuTextAppearance">@style/CustomMenuItemText</item>
     </style>
 
     <style name="TextColor">
@@ -10,4 +12,12 @@
         <item name="android:textColorHint">@color/red</item>
         <item name="android:privateImeOptions">nm</item>
     </style>
+
+    <style name="CustomMenuItemText"
+        parent = "@style/TextAppearance.AppCompat.Widget.ActionBar.Menu">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+
 </resources>
