--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="orange">#fffb5522</color>
     <color name="blue">#ff0000ff</color>
-    <color name="lightblue">#ff00ffff</color>
+    <color name="light_blue">#ff00ffff</color>
+    <color name="lighter_blue">#ffbdfcfc</color>
+    <color name="light_purple">#ffddbdfc</color>
     <color name="green">#ff00ff00</color>
+    <color name="light_green">#ffc2f8b6</color>
     <color name="yellow">#ffffff00</color>
     <color name="white">#ffffffff</color>
     <color name="black">#ff000000</color>
