--- a/app/src/main/res/layout/fragment_show_screenings.xml
+++ b/app/src/main/res/layout/fragment_show_screenings.xml
@@ -3,12 +3,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <ListView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvScreenings"
-        android:layout_alignParentTop="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/no_screenings"
+        android:id="@+id/tvNoScreenings"
+        android:background="@color/lighter_blue"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:dividerHeight="2dp"/>
+        android:visibility="gone"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/lvScreenings"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:dividerHeight="2dp"
+        android:layout_below="@+id/tvNoScreenings"
+        />
+
 </RelativeLayout>
