--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -14,12 +14,11 @@
         android:layout_centerHorizontal="true"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/btnTestNext"
-        android:layout_marginTop="117dp"
-        android:layout_below="@+id/tvTestQuestion"
+        android:background="@drawable/button_0_sq"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
