--- a/app/src/main/res/layout/fragment_show_screenings.xml
+++ b/app/src/main/res/layout/fragment_show_screenings.xml
@@ -10,6 +10,7 @@
         android:text="@string/no_screenings"
         android:id="@+id/tvNoScreenings"
         android:background="@color/lighter_blue"
+        style = "@style/TextColor"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
