Add logic for handling cutoff age. Work on drawer to highlight and scroll to correct views. Raise and lower keyboard in FlowCOntrolActivity when drawer opens and closes.  Check for completed groups.

--- a/app/src/main/res/layout/activity_flow_control.xml
+++ b/app/src/main/res/layout/activity_flow_control.xml
@@ -17,5 +17,6 @@
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:groupIndicator="@null"
+        android:transcriptMode="disabled"
         android:dividerHeight="2dp" />
 </android.support.v4.widget.DrawerLayout>
