--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="light_green">#ffc2f8b6</color>
     <color name="yellow">#ffffff00</color>
     <color name="white">#ffffffff</color>
+    <color name="off_white">#ffe8e8e8</color>
     <color name="black">#ff000000</color>
     <color name="red">#ffff0000</color>
     <color name="light_red">#ffffa3a3</color>
