--- a/app/src/main/res/layout/fragment_splash_1.xml
+++ b/app/src/main/res/layout/fragment_splash_1.xml
@@ -4,8 +4,8 @@
                 android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -32,5 +32,44 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         style = "@style/TextColor"
-        android:layout_marginTop="37dp"/>
+        android:layout_marginTop="15dp"/>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/textView2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/win3"
+            android:id="@+id/textView3"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="51dp"
+            style = "@style/TextColor"
+            android:layout_marginBottom="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/SpcAndLang"
+            android:id="@+id/textView4"
+            android:layout_below="@+id/textView3"
+            style = "@style/TextColor"
+            android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/screening"
+            android:id="@+id/textView5"
+            android:layout_below="@+id/textView4"
+            style = "@style/TextColor"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
 </RelativeLayout>
