Students scores used to determine colors of buttons on overview menu are now calculated based on total number of questions in category type instead of number of questions answered.

--- a/app/src/main/res/drawable/button_red_shadowed.xml
+++ b/app/src/main/res/drawable/button_red_shadowed.xml
@@ -10,6 +10,7 @@
     <item>
         <inset
             android:drawable="@drawable/button_red"
+            android:insetRight="5dp"
             android:insetBottom="5dp"/>
     </item>
 
