--- a/app/src/main/res/drawable/button_white_shadowed.xml
+++ b/app/src/main/res/drawable/button_white_shadowed.xml
@@ -10,6 +10,7 @@
     <item>
         <inset
             android:drawable="@drawable/button_white"
+            android:insetRight="5dp"
             android:insetBottom="5dp"/>
     </item>
 
