--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/rlListItem">
+    android:id="@+id/rlListItem"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,5 +19,5 @@
         android:gravity="center_vertical"
         android:background="#ffe7ffec"
         style = "@style/TextColor"
-        android:paddingLeft="15dp" />
+        android:paddingLeft="30dp" />
 </RelativeLayout>
