--- a/app/src/main/res/layout/list_screenings_item.xml
+++ b/app/src/main/res/layout/list_screenings_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <TextView
@@ -59,4 +59,38 @@
             style = "@style/TextColor"
             android:layout_alignParentEnd="true"/>
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/overview"
+            android:id="@+id/btnOverview"
+            android:layout_gravity="center_vertical"
+            style = "@style/TextColor"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/questions"
+            android:id="@+id/btnQuestions"
+            android:layout_gravity="center_vertical"
+            style = "@style/TextColor"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/results"
+            android:id="@+id/btnResults"
+            android:layout_gravity="center_vertical"
+            style = "@style/TextColor"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
