--- a/app/src/main/res/layout/question_last_part.xml
+++ b/app/src/main/res/layout/question_last_part.xml
@@ -124,13 +124,14 @@
     android:layout_height="wrap_content"
     android:id="@+id/gvIconAnswers"
     android:layout_above="@+id/relativeLayout2"
-
     android:columnWidth="50dp"
     android:stretchMode="columnWidth"
     android:numColumns="3"
     android:layout_centerHorizontal="true"
     android:gravity="center_horizontal"
-    android:background="@drawable/view_border"/>
+    android:background="@drawable/view_border"
+    android:paddingTop="2dp"
+    android:paddingBottom="4dp"/>
 
     <LinearLayout
     android:orientation="horizontal"
@@ -143,7 +144,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/overview"
-            android:id="@+id/brnOverview"
+            android:id="@+id/btnOverview"
             style = "@style/TextColor"
             android:layout_weight="1"/>
 
