--- a/app/src/main/res/layout/list_icon_item.xml
+++ b/app/src/main/res/layout/list_icon_item.xml
@@ -10,5 +10,6 @@
         android:layout_height="match_parent"
         android:id="@+id/ibIcon"
         android:scaleType="fitXY"
-        />
+        android:padding="7dp"
+        android:longClickable="false"/>
 </RelativeLayout>
