--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:gravity="right"
+    android:gravity="left"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:layout_width="match_parent"
