--- a/app/src/main/res/layout/fragment_results_detail_category_view.xml
+++ b/app/src/main/res/layout/fragment_results_detail_category_view.xml
@@ -16,7 +16,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginLeft="15dp"
+        android:textStyle="bold"
+        android:textSize="26dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -35,27 +37,35 @@
             android:id="@+id/textView16"
             android:layout_weight=".5"
             style = "@style/TextColor"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            android:layout_marginRight="5dp"/>
 
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/answer_type"
-            android:id="@+id/textView17"
-            android:layout_weight="0.25"
-            style = "@style/TextColor"
-            android:gravity="center_horizontal"/>
+            android:layout_height="match_parent"
+            android:layout_weight=".5">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/the_answer"
-            android:id="@+id/textView18"
-            android:layout_weight="0.25"
-            style = "@style/TextColor"
-            android:gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/the_answer"
+                android:id="@+id/textView18"
+                android:layout_weight="0.5"
+                style = "@style/TextColor"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/answer_type"
+                android:id="@+id/textView17"
+                android:layout_weight="0.15"
+                style = "@style/TextColor"
+                android:gravity="center_horizontal"/>
+        </LinearLayout>
 
         <TextView
             android:layout_width="0dp"
@@ -71,7 +81,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/black"
         android:layout_below="@+id/linearLayout2"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -81,7 +91,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout4"
+        android:id="@+id/llQuestion"
         android:layout_below="@+id/linearLayout3"
         android:layout_alignLeft="@+id/tvCategory"
         android:layout_alignStart="@+id/tvCategory">
@@ -90,8 +100,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_below="@+id/linearLayout4"
+        android:background="@android:color/black"
+        android:layout_below="@+id/llQuestion"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
 
